--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,20 @@
+
+# Includes an icon in the footer for each username you enter
+footer-links:
+  dribbble: 
+  email: 
+  facebook: sentimony.records
+  flickr: 
+  github: # sentimony-records
+  instagram: 
+  linkedin: 
+  pinterest: 
+  rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
+  twitter: 
+  stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
+
+
+
 # Build settings
 
 markdown: kramdown
