--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/sentimony/sentimony.github.io"
-  },
   "dependencies": {
-    "coriolan-ui": "^0.1.14"
+    "coriolan-ui": "^0.1.18",
+    "normalize.css": "^5.0.0"
   },
   "devDependencies": {
-    "gulp": "^3.8.8",
-    "gulp-sass": "^2.1.0",
-    "browser-sync": "^1.3.7",
-    "gulp-autoprefixer": "1.0.0"
+    "browser-sync": "^2.18.5",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-plumber": "^1.1.0",
+    "gulp-sass": "^3.0.0",
+    "gulp-uglify": "^2.0.0",
+    "require-dir": "^0.3.1"
   }
 }
