--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -1,3 +1,5 @@
 baseurl: ''
 include: ['_pages']
-exclude: ['README.md', 'package.json', 'node_modules/', 'gulpfile.js']
+exclude: ['README.md', 'package.json', 'node_modules/', 'gulpfile.js', 'Gemfile', 'Gemfile.lock']
+includes_dir: ./_components
+data_dir: ./_components
