--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
     "normalize.css": "^5.0.0"
   },
   "devDependencies": {
-    "browser-sync": "^2.18.8",
+    "browser-sync": "^2.18.5",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-concat": "^2.6.1",
+    "gulp-iconfont": "^8.0.1",
+    "gulp-iconfont-css": "^2.1.0",
     "gulp-plumber": "^1.1.0",
-    "gulp-sass": "^3.1.0",
-    "gulp-uglify": "^2.1.0",
+    "gulp-sass": "^3.0.0",
+    "gulp-sass-unicode": "^1.0.1",
+    "gulp-uglify": "^2.0.0",
     "require-dir": "^0.3.1"
   }
 }
