--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "coriolan-ui": "^0.1.19",
-    "normalize.css": "^5.0.0"
+    "normalize.css": "^5.0.0",
+    "swiper": "^3.4.2"
   },
   "devDependencies": {
     "browser-sync": "^2.18.8",
@@ -15,5 +16,8 @@
     "gulp-sass-unicode": "^1.0.1",
     "gulp-uglify": "^2.1.0",
     "require-dir": "^0.3.1"
+  },
+  "scripts": {
+    "build": "gulp font && gulp"
   }
 }
