add goodshare.js, add retina-vanila.js, clean images

--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "coriolan-ui": "^0.1.19",
+    "goodshare.js": "^4.0.6",
+    "jquery": "^3.2.1",
     "normalize.css": "^5.0.0",
     "swiper": "^3.4.2"
   },
