add firebase, add social links at contacts, upd content, cleaning

--- a/_components/Friends/config.json
+++ b/_components/Friends/config.json
@@ -10,7 +10,7 @@
   {
     "title": "ClockTail Records",
     "site": "",
-    "bandcamp": "",
+    "bandcamp": "https://clocktailrecords1.bandcamp.com",
     "facebook": "https://www.facebook.com/clocktailrecordsofficial",
     "soundcloud": ""
   },
