--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "coriolan-ui": "^0.1.19",
     "goodshare.js": "^4.0.6",
     "jquery": "^3.2.1",
+    "layzr.js": "^1.4.3",
     "normalize.css": "^5.0.0",
     "swiper": "^3.4.2"
   },
