--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
     "coriolan-ui": "^0.1.19",
     "goodshare.js": "^4.0.6",
     "jquery": "^3.2.1",
-    "layzr.js": "^1.4.3",
-    "normalize.css": "^5.0.0",
+    "lazysizes": "^3.0.0",
+    "normalize.css": "^6.0.0",
     "swiper": "^3.4.2"
   },
   "devDependencies": {
@@ -17,7 +17,7 @@
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^3.1.0",
     "gulp-sass-unicode": "^1.0.1",
-    "gulp-uglify": "^2.1.0",
+    "gulp-uglify": "^2.1.2",
     "require-dir": "^0.3.1"
   },
   "scripts": {
