rework soundcloud_id for PageArtist

--- a/_components/News/config.json
+++ b/_components/News/config.json
@@ -1,5 +1,10 @@
 [
   {
+    "title": "VA The Ten",
+    "date": "2017-04-13",
+    "url": "/release/va-the-ten/"
+  },
+  {
     "title": "Tentura «Beyond Illusion»",
     "date": "2015-02-22",
     "url": "/release/tentura-beyond-illusion/"
