--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -3,3 +3,5 @@ include: ['_pages']
 exclude: ['README.md', 'package.json', 'node_modules/', 'gulpfile.js', 'Gemfile', 'Gemfile.lock']
 includes_dir: ./_components
 data_dir: ./_components
+
+slogan: Psychedelic Music Label
