--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "goodshare.js": "^4.0.6",
     "lazysizes": "^3.0.0",
     "normalize.css": "^6.0.0",
-    "swiper": "^3.4.2"
+    "swiper": "^3.4.2",
+    "vue": "^2.3.3",
+    "vue-nav-tabs": "^0.2.2"
   },
   "devDependencies": {
     "browser-sync": "^2.18.8",
