--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "require-dir": "^0.3.1"
   },
   "scripts": {
+    "develop": "gulp font && gulp watch",
     "build": "gulp font && gulp"
   }
 }
