--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "goodshare.js": "^4.0.6",
     "lazysizes": "^4.0.0-rc1",
     "normalize.css": "^7.0.0",
+    "requirejs": "^2.3.3",
     "swiper": "^3.4.2",
     "vue": "^2.3.3",
     "vue-nav-tabs": "^0.2.2"
@@ -19,7 +20,7 @@
     "gulp-sass": "^3.1.0",
     "gulp-sass-unicode": "^1.0.1",
     "gulp-uglify": "^3.0.0",
-    "require-dir": "^0.3.1"
+    "require-dir": "^0.3.2"
   },
   "scripts": {
     "develop": "gulp font && gulp watch",
