exclude yarn.lock from buld

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 baseurl: ''
 include: ['_pages']
-exclude: ['README.md', 'package.json', 'node_modules/', 'gulpfile.js', 'Gemfile', 'Gemfile.lock']
+exclude: ['README.md', 'package.json', 'node_modules/', 'gulpfile.js', 'Gemfile', 'Gemfile.lock', 'yarn.lock']
 includes_dir: ./_components
 data_dir: ./_components
 
