--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "require-dir": "^0.3.2"
   },
   "scripts": {
-    "develop": "gulp font && gulp watch",
-    "build": "gulp font && gulp"
+    "clean": "rm -rf _site/",
+    "develop": "yarn run clean && gulp font && gulp watch",
+    "build": "yarn run clean && gulp font && gulp"
   }
 }
