upd dependencies, add updates

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "lang": "en",
+  "lang": "en-US",
   "dir": "ltr",
   "name": "Sentimony Records App",
   "description": "Progressive web app of Sentimony Records - psychedelic music label.",
