--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,26 @@
 {
-  "lang": "en-US",
-  "dir": "ltr",
   "name": "Sentimony Records App",
-  "description": "Progressive web app of Sentimony Records - psychedelic music label.",
   "short_name": "Sentimony",
-  "theme_color": "#8f0100",
-  "background_color": "#8f0100",
+  "description": "Progressive web app of Sentimony Records - psychedelic music label",
+  "lang": "en-US",
+  "start_url": "/",
+  "dir": "ltr",
+  "display": "browser",
+  "orientation": "any",
+  "theme_color": "black",
+  "icons": [
+    {
+      "src": "assets/img/favicons/favicon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "assets/img/favicons/favicon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ],
+  "background_color": "black",
   "serviceworker": {
   }
 }
