--- a/manifest.json
+++ b/manifest.json
@@ -5,22 +5,29 @@
   "lang": "en-US",
   "start_url": "/",
   "dir": "ltr",
-  "display": "minimal-ui",
-  "orientation": "any",
-  "theme_color": "black",
-  "icons": [
-    {
-      "src": "assets/img/favicons/favicon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "assets/img/favicons/favicon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ],
-  "background_color": "black",
-  "serviceworker": {
-  }
+  "display": "standalone",
+  "orientation": "portrait",
+  "theme_color": "#f1f1f1",
+  "background_color": "#2a2a2a",
+  "icons": [{
+    "src": "assets/img/favicons/favicon-96.png",
+    "sizes": "96x96",
+    "type": "image/png",
+    "density": 0.75
+  }, {
+    "src": "assets/img/favicons/favicon-144.png",
+    "sizes": "144x144",
+    "type": "image/png",
+    "density": 0.75
+  }, {
+    "src": "assets/img/favicons/favicon-192.png",
+    "sizes": "192x192",
+    "type": "image/png",
+    "density": 0.75
+  }, {
+    "src": "assets/img/favicons/favicon-512.png",
+    "sizes": "512x512",
+    "type": "image/png",
+    "density": 0.75
+  }]
 }
