--- a/package.json
+++ b/package.json
@@ -11,18 +11,34 @@
     "vue-nav-tabs": "^0.2.2"
   },
   "devDependencies": {
+    "axios": "^0.16.2",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.18.13",
+    "css-loader": "^0.28.4",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-concat": "^2.6.1",
+    "gulp-copy": "^1.0.1",
     "gulp-iconfont": "^9.0.0",
     "gulp-iconfont-css": "^2.1.0",
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^3.1.0",
     "gulp-sass-unicode": "^1.0.1",
+    "node-sass": "^4.5.3",
     "require-dir": "^0.3.2",
-    "uglifyjs-webpack-plugin": "^0.4.3",
-    "webpack": "^2.3.1"
+    "scss-loader": "0.0.1",
+    "streamqueue": "^1.1.1",
+    "uglifyjs-webpack-plugin": "^0.4.6",
+    "vue": "^2.2.2",
+    "vue-axios": "^2.0.2",
+    "vue-loader": "^11.3.1",
+    "vue-style-loader": "^2.0.4",
+    "vue-template-compiler": "^2.2.4",
+    "webpack": "^2.3.1",
+    "webpack-node-externals": "^1.6.0"
   },
   "scripts": {
     "clean": "rm -rf _site/ && rm -rf assets/js/ && rm -rf assets/css/ && rm -rf assets/fonts/ && rm -rf sw-toolbox.js && rm -rf .tmp/",
