--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "coriolan-ui": "^0.1.19",
+    "firebase": "^4.3.0",
     "goodshare.js": "^4.0.6",
     "jquery": "^3.2.1",
     "lazysizes": "^4.0.0-rc3",
