--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
   "display": "standalone",
   "orientation": "portrait",
   "theme_color": "#f1f1f1",
-  "background_color": "#2a2a2a",
+  "background_color": "#8f0100",
   "icons": [{
     "src": "assets/img/favicons/favicon-96.png",
     "sizes": "96x96",
