--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "webpack-node-externals": "^1.6.0"
   },
   "scripts": {
-    "clean": "rm -rf _site/; rm -rf assets/js/; rm -rf assets/css/; rm -rf assets/fonts/; rm -rf assets/data/; rm -rf sw-toolbox.js; rm -rf .tmp/",
-    "develop": "npm run clean; gulp font; gulp watch",
-    "build": "npm run clean; gulp font; gulp"
+    "clean": "rm -rf _site/; rm -rf assets/js/; rm -rf assets/css/; rm -rf assets/fonts/; rm -rf assets/data/; rm -rf sw-toolbox.js; rm -rf .tmp/;",
+    "develop": "npm run clean; gulp font; gulp watch;",
+    "build": "npm run clean; gulp font; gulp;"
   }
 }
