--- a/_components/Releases/releases.json
+++ b/_components/Releases/releases.json
@@ -1,16 +1,16 @@
 {
   "releases": {
     "data": [{
-        "title": "Overdream «Beautiful Thin King»",
-        "date": "2017-10-30",
-        "slug": "overdream-beautiful-thin-king",
+        "title": "Ufomatka «Altering The Synaptic Controllers»",
+        "date": "2017-09-30",
+        "slug": "ufomatka-altering-the-synaptic-controllers",
         "cover": false,
         "cat_no": "sencd027",
         "coming_soon": true
       }, {
-        "title": "Ufomatka «Altering The Synaptic Controllers»",
-        "date": "2017-09-30",
-        "slug": "zymosis-insight",
+        "title": "Overdream «Beautiful Thinking»",
+        "date": "2017-09-25",
+        "slug": "overdream-beautiful-thinking",
         "cover": false,
         "cat_no": "sencd026",
         "coming_soon": true
