--- a/_components/Releases/releases.json
+++ b/_components/Releases/releases.json
@@ -10,7 +10,7 @@
       }, {
         "title": "Ufomatka «Altering The Synaptic Controllers»",
         "date": "2017-09-30",
-        "slug": "zymosis-insight",
+        "slug": "ufomatka-altering-the-synaptic-controllers",
         "cover": false,
         "cat_no": "sencd026",
         "coming_soon": true
