--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "swiper": "^3.4.2",
     "vue": "^2.4.2",
     "vue-awesome-swiper": "^2.6.4",
-    "vue-nav-tabs": "^0.2.2"
+    "vue-nav-tabs": "^0.2.2",
+    "vuex": "^2.4.0"
   },
   "devDependencies": {
     "axios": "^0.16.2",
